--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&amp;subset=latin-ext" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="Vendors/css/normalize.css">
+         <link rel="icon" href="favicon.ico">
         <link rel="stylesheet" type="text/css" href="Vendors/css/Grid.css">
         <link rel="stylesheet" type="text/css" href="Resources/CSS/style.css">
         <link rel="stylesheet" type="text/css" href="Resources/CSS/queries.css">
