--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
             </header>
         
             <section class="section-features">
-                
+                <div class="form-group">
+    <label>Meeting Date</label>
+    <input type="date" name="meeting_date" placeholder="Meeting date " value="<?php echo $meeting_date ?>"
+        class="form-control" id="meeting-date">
+
+</div>
                 <div class="row">
                     <h2>Get Food Fast &mdash; Not Fast Food</h2>
                     <p class="long-copy">
